--- a/package.json
+++ b/package.json
@@ -9,9 +9,19 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "cookie-parser": "~1.4.3",
+    "debug": "~2.6.9",
+    "dts-generator": "^2.1.0",
+    "express": "~4.16.0",
+    "http-errors": "~1.6.2",
+    "jade": "~1.11.0",
+    "mongoose": "^5.3.4",
+    "morgan": "~1.9.0",
     "vue": "^2.5.17",
     "vue-axios": "^2.1.4",
     "vue-class-component": "^6.0.0",
+    "vue-infinite-scroll": "^2.0.2",
+    "vue-infinity-scroll": "^1.1.5",
     "vue-lazyload": "^1.2.6",
     "vue-property-decorator": "^7.0.0",
     "vue-router": "^3.0.1",
